--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: HyeLimYun
 email: yhly970@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Themed by ejjoo
+  Embedded System
 # baseurl: "/" # the subpath of your site, e.g. /blog
 # url: "http://ejjoo.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: hyelimYun
